--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,27 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     </properties>
+
+    <profiles>
+        <!-- Perfil para testes unitários -->
+        <profile>
+            <id>unit-tests</id>
+            <properties>
+                <test.include>**/*Test.java</test.include>
+                <test.exclude>**/*IT.java</test.exclude>
+            </properties>
+        </profile>
+
+        <!-- Perfil para testes de integração -->
+        <profile>
+            <id>integration-tests</id>
+            <properties>
+                <test.include>**/*IT.java</test.include>
+                <test.exclude>**/*Test.java</test.exclude>
+            </properties>
+        </profile>
+    </profiles>
+
     <dependencies>
         <!-- Spring Boot -->
         <dependency>
@@ -79,6 +100,41 @@
 
     <build>
         <plugins>
+            <!-- JaCoCo Plugin -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <!-- Cria o arquivo de cobertura ao rodar os testes -->
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- Gera o relatório após os testes -->
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>${test.include}</include>
+                    </includes>
+                    <excludes>
+                        <exclude>${test.exclude}</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
